2022-03-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (eev-version): new function.

2022-03-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: rewritten almost completely.

2022-03-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-quick-intro): rewrote the section "10.2.
	Generating short hyperlinks to info nodes" following some ideas
	by Bruno Macedo (thanks!=)).

2022-02-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-code-pdfbackend): make the functions of the
	form `find-xxxpage' interactive.
	(ee-code-pdftextbackend): make the functions of the form
	`find-xxxtext' interactive.

	* eev-elinks.el (find-emenubar-links): new function.

2022-02-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-0x0-upload): rewritten.

2022-02-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: new file.

	* eev-load.el (eev-kla): load "eev-kla.el".

	* .dir-locals.el: new file.

	* eev-edit.el (ee-copy-preceding-tag-to-kill-ring): return str.

2022-02-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (code-youtubevideo, find-code-youtubevideo)
	(ee-code-youtubevideo): new functions.

	* eev-tlinks.el (find-youtubedl-links): use `code-youtubevideo'.

2022-02-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideodef): new function.

2022-02-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideoindex): new function.
	(ee-find-1stclassvideo-links): use `find-1stclassvideoindex'.

	* eev-plinks.el (find-anggwget, find-anggwgeta)
	(find-anggwget-elisp, find-anggwgeta-elisp): new function.

2022-02-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-oficina20210video): new function.

2022-02-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-links): changed the part of
	the template that has a "(defun find-*video ...)".
	(find-1stclassvideos): added an (interactive).
